--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,10 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           
+      - name: Run pip
+        run: |
+          pip install scikit-learn
+         
       - name: Run python code
         run: |
           python main.py
